--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="en"><head>
+<html lang="en">
+	<head>
 		<meta charset="utf-8">
 
 		<meta name="description" content="JavaScript controlled particles follow the mouse generating a smooth pattern. The HTML5 canvas element is used for visual output.">
@@ -20,17 +21,6 @@ var flattr_url = 'http://hakim.se/experiments/html5/trail/03/';
 var flattr_btn='compact';
 </script>
 
-		<!-- Google Analytics Tracking Code -->
-		<script>
-		var _gaq = [['_setAccount', 'UA-15240703-1'], ['_trackPageview']];
-		(function(d, t) {
-		var g = d.createElement(t),
-		    s = d.getElementsByTagName(t)[0];
-		g.async = true;
-		g.src = ('https:' == location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		s.parentNode.insertBefore(g, s);
-		})(document, 'script');
-		</script>
 
     <script type="text/javascript" charset="utf-8" async="" src="https://platform.twitter.com/js/button.415474f2e22cee7df272249c34e8f0b1.js"></script></head>
     <body>
@@ -40,15 +30,10 @@ var flattr_btn='compact';
 			<div style="padding: 5px;"><a href="../01/" class="versionLink">Trail 01</a> - <a href="../02/" class="versionLink">Trail 02</a> - <a href="../03/" class="versionLink selected">Trail 03</a></div>					</div>
 		
 <canvas id="world" width="900" height="600" style="position: absolute; left: -44.5px; top: 31px;"><p class="noCanvas">You need a <a href="http://www.google.com/chrome">modern browser</a> to view this.</p></canvas>
-<div id="sharing">
-	<div id="flattr_button"><iframe src="https://button.flattr.com/view/?e=1&amp;url=http%3A%2F%2Fhakim.se%2Fexperiments%2Fhtml5%2Ftrail%2F03%2F&amp;button=compact&amp;" class="FlattrButton" width="110" height="20" frameborder="0" scrolling="no" title="Flattr" border="0" marginheight="0" marginwidth="0" allowtransparency="true"></iframe></div>
-	<iframe id="facebook_button" src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fhakim.se%2Fexperiments%2Fhtml5%2Ftrail%2F03%2F&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowtransparency="true"></iframe>
-	<div id="retweet_button">
-		<iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-share-button twitter-share-button-rendered twitter-tweet-button" title="Twitter Tweet Button" src="https://platform.twitter.com/widgets/tweet_button.9c00c8ca14a8618c4db8e2c43139b138.en.html#dnt=false&amp;id=twitter-widget-0&amp;lang=en&amp;original_referer=https%3A%2F%2Flab.hakim.se%2Ftrail%2F03%2F&amp;related=hakimel&amp;size=m&amp;text=Trail%20-%20an%20experiment%20with%20particle%20movement%20patterns%20in%20HTML5%20by%20%40hakimel.&amp;time=1515777774911&amp;type=share&amp;url=http%3A%2F%2Fhakim.se%2Fexperiments%2Fhtml5%2Ftrail%2F03%2F" style="position: static; visibility: visible; width: 60px; height: 20px;" data-url="http://hakim.se/experiments/html5/trail/03/"></iframe>
-		<script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
-	</div>
-</div>
-<script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script><script src="js/trail.js"></script>
+
+	    <script src="script.js"></script>
 
     
-<iframe scrolling="no" frameborder="0" allowtransparency="true" src="https://platform.twitter.com/widgets/widget_iframe.9c00c8ca14a8618c4db8e2c43139b138.html?origin=https%3A%2F%2Flab.hakim.se" style="display: none;"></iframe><iframe id="rufous-sandbox" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" style="position: absolute; visibility: hidden; display: none; width: 0px; height: 0px; padding: 0px; border: none;" title="Twitter analytics iframe"></iframe></body></html>
+<iframe scrolling="no" frameborder="0" allowtransparency="true" src="https://platform.twitter.com/widgets/widget_iframe.9c00c8ca14a8618c4db8e2c43139b138.html?origin=https%3A%2F%2Flab.hakim.se" style="display: none;"></iframe><iframe id="rufous-sandbox" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" style="position: absolute; visibility: hidden; display: none; width: 0px; height: 0px; padding: 0px; border: none;" title="Twitter analytics iframe"></iframe>
+	</body>
+</html>
