--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 			a{
 				cursor:pointer;
 			}
+			
+			#world{
+				display: block;
+			}
 		</style>
 
   <body>
 
-<canvas id="world" width="900" height="600" style="position: absolute; left: -44.5px; top: 31px;"><p class="noCanvas">You need a <a href="http://www.google.com/chrome">modern browser</a> to view this.</p></canvas>
+<canvas id="world" style="position: absolute; left: -44.5px; top: 31px;"><p class="noCanvas">You need a <a href="http://www.google.com/chrome">modern browser</a> to view this.</p></canvas>
 
 	    <script src="script.js"></script>
 
