--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
 
-<canvas id="world" style="position: absolute; left: -44.5px; top: 31px;"><p class="noCanvas">You need a <a href="http://www.google.com/chrome">modern browser</a> to view this.</p></canvas>
+<canvas id="world"><p class="noCanvas">You need a <a href="http://www.google.com/chrome">modern browser</a> to view this.</p></canvas>
 
 	    <script src="script.js"></script>
 
