--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 			html{
 				color:#000;
 				background:#222222;
+				margin: 0;
+			}
+			body{
+				margin: 0;
 			}
 			a{
 				cursor:pointer;
